# MCUXpresso_LPC55S16_CI_CD

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  mcux_include.json  usbipd-reattach.ps1
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile  README_CI_CD.md
.github/workflows/: c-cpp.yml  deploy.yml
McuLib/src/: McuArmTools.c  McuExtRTC.c  McuSemihost.h  McuShellUart.c  McuShellUart.h  McuUnity.c  McuUnity.h
doxy/: .gitignore
gcovr/: README.md
sdk/: CMakeLists.txt
sdk/device/: linker.ld
sdk/startup/: startup_lpc55s16.c
src/: CMakeLists.txt  IncludeMcuLibConfig.h  McuUnity.c  McuUnity.h  application.c  application.h  leds.c  leds.h  leds_config.h  main.c  platform.c  platform.h  shell.c  shell.h
src/tests/: CMakeLists.txt  test_1.JLinkScript  test_2.JLinkScript  test_3.JLinkScript  test_arg.c  test_arg.h  test_sensor.c  test_sensor.h  tests.c  tests.h
unity/: CMakeLists.txt
